# AdventOfCode2020

./: README.md
Day1/: Main.hs  README.md
Day10/: Main.hs  README.md
Day12/: Main.hs  README.md
Day13/: Main.hs  README.md
Day14/: Day14.cabal  Main.hs  README.md
Day2/: Main.hs  README.md
Day3/: Main.hs  README.md
Day4/: Main.hs  README.md
Day5/: Main.hs  README.md
Day6/: Main.hs  README.md
Day7/: Main.hs  README.md
Day8/: Main.hs  README.md
Day9/: Main.hs  README.md
