cabal-version:       >=1.10

name:                Day14
version:             0.1.0.0
author:              RazielO
build-type:          Simple
extra-source-files:  README.md

executable Day14
  main-is:              Main.hs
  build-depends:        base >=4.14 && <4.15,
                        split,
                        containers
  default-language:     Haskell2010
